--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ server.port=8083
 server.servlet.context-path=/tpfoyer
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+management.endpoint.prometheus.enabled=true
+
