Improve email notif

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,57 +12,45 @@ pipeline {
     stages {
         stage('Clean') {
             steps {
-                catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
-                    sh "mvn clean"
-                }
+                sh "mvn clean"
             }
         }
 
         stage('Setup DB') {
             steps {
-                catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
-                    script {
-                        sh 'docker-compose up -d'
-                    }
+                script {
+                    sh 'docker-compose up -d'
                 }
             }
         }
 
         stage('Compile') {
             steps {
-                catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
-                    sh "mvn compile"
-                }
+                sh "mvn compile"
             }
         }
 
         stage('Test') {
             steps {
-                catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
-                    sh "mvn test -Dspring.profiles.active=local"
-                }
+                sh "mvn test -Dspring.profiles.active=local"
             }
         }
 
         stage('Generate JaCoCo Report') {
             steps {
-                catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
-                    sh "mvn jacoco:report"
-                }
+                sh "mvn jacoco:report"
             }
         }
 
         stage('SonarQube Analysis') {
             steps {
-                catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
-                    script {
-                        withSonarQubeEnv('sonar') {
-                            sh '''
-                                $SCANNER_HOME/bin/sonar-scanner \
-                                -Dsonar.projectName=etudiant-service \
-                                -Dsonar.projectKey=etudiant-service
-                            '''
-                        }
+                script {
+                    withSonarQubeEnv('sonar') {
+                        sh '''
+                            $SCANNER_HOME/bin/sonar-scanner \
+                            -Dsonar.projectName=etudiant-service \
+                            -Dsonar.projectKey=etudiant-service
+                        '''
                     }
                 }
             }
@@ -70,39 +58,31 @@ pipeline {
 
         stage('Quality Gate') {
             steps {
-                catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
-                    script {
-                        waitForQualityGate abortPipeline: true, credentialsId: 'sonar-token'
-                    }
+                script {
+                    waitForQualityGate abortPipeline: true, credentialsId: 'sonar-token'
                 }
             }
         }
 
         stage('Build') {
             steps {
-                catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
-                    sh "mvn package -Dspring.profiles.active=local"
-                }
+                sh "mvn package -Dspring.profiles.active=local"
             }
         }
 
         stage('Publish To Nexus') {
             steps {
-                catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
-                    withMaven(globalMavenSettingsConfig: 'global-settings', jdk: 'JDK17', maven: 'Maven3', traceability: true) {
-                        sh "mvn deploy -Dspring.profiles.active=local"
-                    }
+                withMaven(globalMavenSettingsConfig: 'global-settings', jdk: 'JDK17', maven: 'Maven3', traceability: true) {
+                    sh "mvn deploy -Dspring.profiles.active=local"
                 }
             }
         }
 
         stage('Build & Tag Docker Image') {
             steps {
-                catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
-                    script {
-                        withDockerRegistry(credentialsId: 'docker-cred') {
-                            sh "docker build -t samixouerfelli/etudiant-service:latest ."
-                        }
+                script {
+                    withDockerRegistry(credentialsId: 'docker-cred') {
+                        sh "docker build -t samixouerfelli/etudiant-service:latest ."
                     }
                 }
             }
@@ -110,11 +90,9 @@ pipeline {
 
         stage('Push Docker Image') {
             steps {
-                catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
-                    script {
-                        withDockerRegistry(credentialsId: 'docker-cred') {
-                            sh "docker push samixouerfelli/etudiant-service:latest"
-                        }
+                script {
+                    withDockerRegistry(credentialsId: 'docker-cred') {
+                        sh "docker push samixouerfelli/etudiant-service:latest"
                     }
                 }
             }
@@ -122,35 +100,31 @@ pipeline {
 
         stage('Deploy To Kubernetes') {
             steps {
-                catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
-                    withKubeConfig(
-                        caCertificate: '',
-                        clusterName: 'devops-k8s-cluster',
-                        contextName: 'devops-k8s-cluster',
-                        credentialsId: 'k8-cred',
-                        namespace: 'devops-project',
-                        serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443'
-                    ) {
-                        sh "kubectl apply -f etudiant-dep.yml"
-                    }
+                withKubeConfig(
+                    caCertificate: '',
+                    clusterName: 'devops-k8s-cluster',
+                    contextName: 'devops-k8s-cluster',
+                    credentialsId: 'k8-cred',
+                    namespace: 'devops-project',
+                    serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443'
+                ) {
+                    sh "kubectl apply -f etudiant-dep.yml"
                 }
             }
         }
 
         stage('Verify the Deployment') {
             steps {
-                catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
-                    withKubeConfig(
-                        caCertificate: '',
-                        clusterName: 'devops-k8s-cluster',
-                        contextName: 'devops-k8s-cluster',
-                        credentialsId: 'k8-cred',
-                        namespace: 'devops-project',
-                        serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443'
-                    ) {
-                        sh "kubectl get pods -n devops-project"
-                        sh "kubectl get svc -n devops-project"
-                    }
+                withKubeConfig(
+                    caCertificate: '',
+                    clusterName: 'devops-k8s-cluster',
+                    contextName: 'devops-k8s-cluster',
+                    credentialsId: 'k8-cred',
+                    namespace: 'devops-project',
+                    serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443'
+                ) {
+                    sh "kubectl get pods -n devops-project"
+                    sh "kubectl get svc -n devops-project"
                 }
             }
         }
@@ -163,9 +137,19 @@ pipeline {
                 def buildNumber = env.BUILD_NUMBER
                 def pipelineStatus = currentBuild.result ?: 'SUCCESS'
                 def bannerColor = pipelineStatus.toUpperCase() == 'SUCCESS' ? 'green' : 'red'
-                def failedStage = currentBuild.rawBuild.stages.find { it.status.toString() == 'FAILED' }
-                def failedStageName = failedStage ? failedStage.name : 'None'
-                def logSnippet = failedStage ? currentBuild.rawBuild.log.substring(failedStage.startTimeInMillis, Math.min(failedStage.startTimeInMillis + 1000, currentBuild.rawBuild.log.size())) : 'No error details available'
+                def failedStage = ""
+                def errorSnippet = ""
+
+                if (pipelineStatus != 'SUCCESS') {
+                    // Find the stage that failed and capture a log snippet
+                    currentBuild.rawBuild.getExecution().getStages().each { stage ->
+                        if (stage.getStatus().toString() == "FAILED") {
+                            failedStage = stage.getName()
+                            def logLines = currentBuild.rawBuild.getLog(50)  // Capture the last 50 lines of the log
+                            errorSnippet = logLines.findAll { it.contains("ERROR") || it.contains("Exception") }.join("<br>")
+                        }
+                    }
+                }
 
                 def body = """
                     <html>
@@ -175,9 +159,9 @@ pipeline {
                         <div style="background-color: ${bannerColor}; padding: 10px;">
                             <h3 style="color: white;">Pipeline Status: ${pipelineStatus.toUpperCase()}</h3>
                         </div>
-                        <p><b>Failed Stage:</b> ${failedStageName}</p>
-                        <p><b>Error Log:</b><pre>${logSnippet}</pre></p>
-                        <p>Check the <a href="${BUILD_URL}">console output</a> for full details.</p>
+                        <p><strong>Failed Stage:</strong> ${failedStage}</p>
+                        <p><strong>Error Details:</strong><br> ${errorSnippet}</p>
+                        <p>Check the <a href="${BUILD_URL}">console output</a> for more details.</p>
                     </div>
                     </body>
                     </html>
