--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,49 +7,71 @@ pipeline {
     }
     environment {
         SCANNER_HOME = tool 'sonar-scanner'
+        currentStage = '' // Variable to track the current stage name
+        logFile = '' // Variable to track the log file for each stage
     }
 
     stages {
         stage('Clean') {
             steps {
-                sh "mvn clean"
+                script {
+                    currentStage = 'Clean'
+                    logFile = "clean.log"
+                }
+                sh "mvn clean > ${logFile} 2>&1"
             }
         }
 
         stage('Setup DB') {
             steps {
                 script {
-                    sh 'docker-compose up -d'
+                    currentStage = 'Setup DB'
+                    logFile = "setup_db.log"
+                    sh 'docker-compose up -d > ${logFile} 2>&1'
                 }
             }
         }
 
         stage('Compile') {
             steps {
-                sh "mvn compile"
+                script {
+                    currentStage = 'Compile'
+                    logFile = "compile.log"
+                }
+                sh "mvn compile > ${logFile} 2>&1"
             }
         }
 
         stage('Test') {
             steps {
-                sh "mvn test -Dspring.profiles.active=local"
+                script {
+                    currentStage = 'Test'
+                    logFile = "test.log"
+                }
+                sh "mvn test -Dspring.profiles.active=local > ${logFile} 2>&1"
             }
         }
 
         stage('Generate JaCoCo Report') {
             steps {
-                sh "mvn jacoco:report"
+                script {
+                    currentStage = 'Generate JaCoCo Report'
+                    logFile = "jacoco_report.log"
+                }
+                sh "mvn jacoco:report > ${logFile} 2>&1"
             }
         }
 
         stage('SonarQube Analysis') {
             steps {
                 script {
+                    currentStage = 'SonarQube Analysis'
+                    logFile = "sonarqube_analysis.log"
                     withSonarQubeEnv('sonar') {
                         sh '''
                             $SCANNER_HOME/bin/sonar-scanner \
                             -Dsonar.projectName=etudiant-service \
-                            -Dsonar.projectKey=etudiant-service
+                            -Dsonar.projectKey=etudiant-service > ${logFile} 2>&1
                         '''
                     }
                 }
@@ -59,6 +81,8 @@ pipeline {
         stage('Quality Gate') {
             steps {
                 script {
+                    currentStage = 'Quality Gate'
+                    logFile = "quality_gate.log"
                     waitForQualityGate abortPipeline: true, credentialsId: 'sonar-token'
                 }
             }
@@ -66,14 +90,22 @@ pipeline {
 
         stage('Build') {
             steps {
-                sh "mvn package -Dspring.profiles.active=local"
+                script {
+                    currentStage = 'Build'
+                    logFile = "build.log"
+                }
+                sh "mvn package -Dspring.profiles.active=local > ${logFile} 2>&1"
             }
         }
 
         stage('Publish To Nexus') {
             steps {
-                withMaven(globalMavenSettingsConfig: 'global-settings', jdk: 'JDK17', maven: 'Maven3', traceability: true) {
-                    sh "mvn deploy -Dspring.profiles.active=local"
+                script {
+                    currentStage = 'Publish To Nexus'
+                    logFile = "publish_to_nexus.log"
+                    withMaven(globalMavenSettingsConfig: 'global-settings', jdk: 'JDK17', maven: 'Maven3', traceability: true) {
+                        sh "mvn deploy -Dspring.profiles.active=local > ${logFile} 2>&1"
+                    }
                 }
             }
         }
@@ -81,8 +113,10 @@ pipeline {
         stage('Build & Tag Docker Image') {
             steps {
                 script {
+                    currentStage = 'Build & Tag Docker Image'
+                    logFile = "docker_build_tag.log"
                     withDockerRegistry(credentialsId: 'docker-cred') {
-                        sh "docker build -t samixouerfelli/etudiant-service:latest ."
+                        sh "docker build -t samixouerfelli/etudiant-service:latest . > ${logFile} 2>&1"
                     }
                 }
             }
@@ -91,8 +125,10 @@ pipeline {
         stage('Push Docker Image') {
             steps {
                 script {
+                    currentStage = 'Push Docker Image'
+                    logFile = "docker_push.log"
                     withDockerRegistry(credentialsId: 'docker-cred') {
-                        sh "docker push samixouerfelli/etudiant-service:latest"
+                        sh "docker push samixouerfelli/etudiant-service:latest > ${logFile} 2>&1"
                     }
                 }
             }
@@ -100,31 +136,39 @@ pipeline {
 
         stage('Deploy To Kubernetes') {
             steps {
-                withKubeConfig(
-                    caCertificate: '',
-                    clusterName: 'devops-k8s-cluster',
-                    contextName: 'devops-k8s-cluster',
-                    credentialsId: 'k8-cred',
-                    namespace: 'devops-project',
-                    serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443'
-                ) {
-                    sh "kubectl apply -f etudiant-dep.yml"
+                script {
+                    currentStage = 'Deploy To Kubernetes'
+                    logFile = "kubernetes_deploy.log"
+                    withKubeConfig(
+                        caCertificate: '',
+                        clusterName: 'devops-k8s-cluster',
+                        contextName: 'devops-k8s-cluster',
+                        credentialsId: 'k8-cred',
+                        namespace: 'devops-project',
+                        serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443'
+                    ) {
+                        sh "kubectl apply -f etudiant-dep.yml > ${logFile} 2>&1"
+                    }
                 }
             }
         }
 
         stage('Verify the Deployment') {
             steps {
-                withKubeConfig(
-                    caCertificate: '',
-                    clusterName: 'devops-k8s-cluster',
-                    contextName: 'devops-k8s-cluster',
-                    credentialsId: 'k8-cred',
-                    namespace: 'devops-project',
-                    serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443'
-                ) {
-                    sh "kubectl get pods -n devops-project"
-                    sh "kubectl get svc -n devops-project"
+                script {
+                    currentStage = 'Verify the Deployment'
+                    logFile = "kubernetes_verify.log"
+                    withKubeConfig(
+                        caCertificate: '',
+                        clusterName: 'devops-k8s-cluster',
+                        contextName: 'devops-k8s-cluster',
+                        credentialsId: 'k8-cred',
+                        namespace: 'devops-project',
+                        serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443'
+                    ) {
+                        sh "kubectl get pods -n devops-project > ${logFile} 2>&1"
+                        sh "kubectl get svc -n devops-project >> ${logFile} 2>&1"
+                    }
                 }
             }
         }
@@ -137,18 +181,11 @@ pipeline {
                 def buildNumber = env.BUILD_NUMBER
                 def pipelineStatus = currentBuild.result ?: 'SUCCESS'
                 def bannerColor = pipelineStatus.toUpperCase() == 'SUCCESS' ? 'green' : 'red'
-                def failedStage = ""
                 def errorSnippet = ""
 
-                if (pipelineStatus != 'SUCCESS') {
-                    // Find the stage that failed and capture a log snippet
-                    currentBuild.rawBuild.getExecution().getStages().each { stage ->
-                        if (stage.getStatus().toString() == "FAILED") {
-                            failedStage = stage.getName()
-                            def logLines = currentBuild.rawBuild.getLog(50)  // Capture the last 50 lines of the log
-                            errorSnippet = logLines.findAll { it.contains("ERROR") || it.contains("Exception") }.join("<br>")
-                        }
-                    }
+                // Only gather error logs if the build has failed
+                if (pipelineStatus != 'SUCCESS' && fileExists(logFile)) {
+                    errorSnippet = readFile(logFile).split('\n')[-10..-1].join("<br>")
                 }
 
                 def body = """
@@ -159,8 +196,8 @@ pipeline {
                         <div style="background-color: ${bannerColor}; padding: 10px;">
                             <h3 style="color: white;">Pipeline Status: ${pipelineStatus.toUpperCase()}</h3>
                         </div>
-                        <p><strong>Failed Stage:</strong> ${failedStage}</p>
-                        <p><strong>Error Details:</strong><br> ${errorSnippet}</p>
+                        <p><strong>Failed Stage:</strong> ${currentStage}</p>
+                        <p><strong>Error Details (if any):</strong><br> ${errorSnippet}</p>
                         <p>Check the <a href="${BUILD_URL}">console output</a> for more details.</p>
                     </div>
                     </body>
